# MEG

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  MEG_MASTER_PRD.md  MEG_MASTER_PRD_v4.1_patched.md  MEG_PRD_v3_final.md  README.md  STATUS.md  TODOS.md  VERSION  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: phase0a-smoke.yml  phase0b-research-smoke.yml
config/: config.yaml
docs/: DATA_MODEL.md  PHASE_0A_SHARED_RAIL.md  TESTING_SETUP.md
docs/phase0a/: 0A-01_CANONICAL_ID_INVENTORY.md  0A-03A_PRODUCTION_BOUNDARY_MIGRATION_PLAN.md  0A-03C_PREFILTER_BOUNDARY_POSTMIGRATION_AUDIT.md  0A-04A_DATALAYER_PUBLISHER_INSPECTION.md  0A-04C_NEXT_BOUNDARY_INSPECTION.md  0A-04E_NEXT_BOUNDARY_AFTER_QUALIFIED_PUBLISHER.md  0A-04G_DASHBOARD_SIGNAL_FEED_POSTMIGRATION_AUDIT.md  0A-05A_SIGNAL_AGENT_RAIL_WIRING_INSPECTION.md  0A-05B_SIGNAL_ENGINE_RUNNER_OWNERSHIP_PLAN.md  0A-05E_MAIN_STARTUP_WIRING_PREFLIGHT.md  0A-05G_SIGNAL_RUNNER_POSTWIRING_AUDIT.md  0A-05H_TRADEPROPOSAL_BOUNDARY_PREFLIGHT.md  0A_CLOSEOUT_AND_PHASE0B_PIVOT.md
docs/phase0b/: 0B-01_DUCKDB_HISTORICAL_LAKE_PLAN.md  0B-02_DATA_AND_REPO_INVENTORY_PLAN.md  0B-03_SCHEMA_DATA_DICTIONARY_SPEC.md  0B-08_RESEARCH_CLI_USAGE.md  0B-09_SOURCE_MANIFEST_PROVENANCE_SPEC.md  0B-11_JON_BECKER_SOURCE_REVIEW_CHECKLIST.md  0B-12_JON_BECKER_SOURCE_REVIEW_RESULTS_TEMPLATE.md  0B-16_LOCAL_ARCHIVE_INSPECTION_PLAN.md  source_manifest.example.yaml  (+7 more)
meg/: main.py
scripts/: bootstrap_wallets.py
tests/: conftest.py
(+130 files in other folders)
