[project]
name = "meg"
version = "0.1.0"
description = "Megalodon: Prediction market intelligence engine for Polymarket"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "redis>=5.0",
    "web3>=6.15",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "watchdog>=4.0",
    "aiohttp>=3.9",
    "asyncpg>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "py-clob-client>=0.14",
    "python-telegram-bot>=21.0",
    "fastapi>=0.110",
    "uvicorn>=0.28",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["meg*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
